--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,10 @@ plugins {
 	id 'org.springframework.boot' version '2.6.3'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
+	id 'jacoco'
 }
+
+apply plugin: 'jacoco'
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
@@ -19,4 +22,12 @@ dependencies {
 
 test {
 	useJUnitPlatform()
+}
+
+jacocoTestReport {
+  dependsOn test
+	reports {
+		html.enabled true
+		xml.enabled true
+	}
 }
