--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,12 @@ group = 'com.example'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
+sonarqube {
+    properties {
+        property "sonar.organization", "curso-devops-foundation"
+    }
+}
+
 repositories {
 	mavenCentral()
 }
