--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,8 @@ sourceCompatibility = '1.8'
 sonarqube {
     properties {
         property "sonar.organization", "curso-devops-foundation"
+	property "sonar.branch.name", "feature-ms-lourdestorres-cursodevops"
+	property "sonar.branch.target", "main"
     }
 }
 
